--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body{
   display: flex;
   flex-direction: column;
@@ -7,8 +6,20 @@ body{
   margin: 0;
   background-color: gainsboro;
 }
+
+section {
+  background-color: red;
+  width: 100%;
+  margin: auto; 
+  text-align: center; 
+  margin-bottom: 30px;
+}
+
 h1 {
-  letter-spacing: 3px;
+  letter-spacing: 10px;
+  font-family: 'Pokemon Solid', sans-serif;
+  color: gold;
+  font-size: 50px;                                
 }
 
 .poke-container {
@@ -55,5 +66,17 @@ h1 {
 .pokemon .name {
   margin: 15px 0 7px;
   letter-spacing: 1px;
+}
+
+footer {
+  background-color: red;
+  width: 100%;
+  text-align: center;
+  margin-top: 35px;
+}
+
+footer span {
+  color: gold;
+  font-size: 25px;
 }
 
