--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ section {
 
 h1 {
   letter-spacing: 10px;
-  font-family: 'Pokemon Solid', sans-serif;
+  font-family: 'Luckiest Guy', cursive;
   color: gold;
   font-size: 50px;                                
 }
